syntax = "proto3";

package envoy.extensions.common.ratelimit.v3;

option java_package = "io.envoyproxy.envoy.extensions.common.ratelimit.v3";
option java_outer_classname = "RatelimitProto";
option java_multiple_files = true;
option go_package = "github.com/envoyproxy/go-control-plane/envoy/extensions/common/ratelimit/v3;ratelimitv3";

// A RateLimitDescriptor is a list of hierarchical entries that are used by the service to
// determine the final rate limit key and overall allowed limit. Here are some examples of how
// they might be used for the domain "envoy".
//
// .. code-block:: cpp
//
//   ["]remote_address", "10.0.0.1"]
//
//   ["path", "/foo", "method", "GET"]
//
//   ["header", "x-envoy-retry-on", "max-retries", "3"]
//
//   ["remote_address", "10.0.0.1", "path", "/foo", "method", "GET"]
//
message RateLimitDescriptor {
  message Entry {
    // Descriptor key.
    string key = 1;

    // Descriptor value.
    string value = 2;
  }

  // Override rate limit to apply to this descriptor instead of the limit
  // configured in the rate limit service. See :ref:`rate limit override
  // <config_http_filters_rate_limit_rate_limit_override>` for more information.
  message RateLimitOverride {
    // The number of requests per unit of time.
    uint32 requests_per_unit = 1;

    // The unit of time.
    RateLimitUnit unit = 2;
  }

  // Descriptor list.
  repeated Entry entries = 1;

  // Optional rate limit override to supply to the ratelimit service.
  RateLimitOverride limit = 2;
}

// Defines the version of the standard to use for X-RateLimit headers.
enum XRateLimitHeadersRFCVersion {
  // X-RateLimit headers disabled.
  OFF = 0;

  // Use `draft version 03 <https://tools.ietf.org/id/draft-polli-ratelimit-headers-03.html>`_
  // where 3 headers will be added:
  //
  // * ``X-RateLimit-Limit`` - indicates the request-quota associated to the
  //   client in the current time-window.
  // * ``X-RateLimit-Remaining`` - indicates the remaining request-quota in
  //   the current time-window.
  // * ``X-RateLimit-Reset`` - indicates the number of seconds until reset of
  //   the current time-window.
  DRAFT_VERSION_03 = 1;
}

// Identifies the unit of of time for rate limit.
enum RateLimitUnit {
  // The time unit is not known.
  UNKNOWN = 0;

  // The time unit representing a second.
  SECOND = 1;

  // The time unit representing a minute.
  MINUTE = 2;

  // The time unit representing an hour.
  HOUR = 3;

  // The time unit representing a day.
  DAY = 4;
}

// [#next-free-field: 6]
message VhRateLimitsOptions {
  // The virtual host rate limits are ignored (but set in descriptor) if the vh_override_key is
  // provided in the rate limit configuration.
  bool disable_vh_rate_limits = 1;
}
